# vimid

./: .gitignore  .gitmodules  Dockerfile  LICENSE  README.md
.devcontainer/: devcontainer.json  docker-compose.yml
apps/kfusion/: CMakeLists.txt  Makefile
apps/kfusion/cmake/: FindOpenCL.cmake  FindPAPI.cmake  FindTooN.cmake
apps/kfusion/demo/: chair2.sh  chair3.sh  chair4.sh  kitchen.sh  vd1.sh  vd2.sh  vd3.sh  vd4.sh  vd5.sh
apps/kfusion/include/: commons.h  config.h  constant_parameters.h  default_parameters.h  draw.h  kernels.h  vimidAction.h  vtk-io.h
apps/kfusion/scripts/: associate.py  associate.sh  depth_name_change.py  drift_analysis.py  process.py
apps/kfusion/scripts/format_convert/: all_format.py  gt_format.py  time_format.py  tum_format.py  tum_format_2.py
apps/kfusion/src/: benchmark.cpp  main.cpp  mainQt.cpp  vimidAction.cpp
apps/kfusion/src/cpp/: kfusion.cpp
apps/kfusion/src/cpp/KeyFrame/: KeyFrame.cpp  KeyFrame.h
apps/kfusion/src/cpp/bfusion/: alloc_impl.hpp  mapping_impl.hpp  rendering_impl.hpp
apps/kfusion/src/cpp/continuous/: volume_traits.hpp
apps/kfusion/src/cpp/dataProcessing/: dataLoader.cpp  dataLoader.h  dataRecorder.cpp  dataRecorder.h
apps/kfusion/src/cpp/frontEnd/: pose_estimation.h
apps/kfusion/src/cpp/kfusion/: alloc_impl.hpp  mapping_impl.hpp  rendering_impl.hpp
apps/kfusion/src/cpp/object/: object.cpp  object.h
apps/kfusion/src/cpp/preprocessing/: preprocessing.cpp  preprocessing.h
apps/kfusion/src/cpp/rendering/: rendering.cpp  rendering.h
apps/kfusion/src/cpp/segmentation/: segmentation.cpp  segmentation.h
apps/kfusion/src/cpp/tracking/: tracking.cpp  tracking.h
apps/kfusion/test/: CMakeLists.txt
apps/kfusion/test/imu_propagation/: CMakeLists.txt  cam0_gt.visim  estimation.txt  evo.sh  gt.txt  imu_optimization_unittest.cpp  imu_propagation_unittest.cpp  okvis.txt  rpe.sh  vimid.txt
apps/kfusion/test/imu_propagation/imu0/: data.csv
apps/kfusion/test/preprocessing/: interp_unittest.cpp
apps/kfusion/test/segmentation/: segmentation_unittest.cpp
apps/kfusion/test/tracking/: jacobians_unittest.cpp
config/: config_vimid.yaml
lib/: octant_ops.hpp
lib/algorithms/: filter.hpp  meshing.hpp  raycasting.cpp
lib/functors/: projective_functor.hpp
lib/geometry/: octree_collision.hpp
lib/test/algorithms/: unique_unittest.cpp
lib/test/allocation/: alloc_unittest.cpp
lib/test/interp/: gather_unittest.cpp  interpolation_unittest.cpp
utils/: OdometryProvider.h  math_utils.h
